[build-system]
requires = ["setuptools>=61", "wheel", "pybind11", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "rns_engine"
version = "0.3.0"
description = "Exact RNS engine with session/cache API."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Evan Wesley" }
]
license = "Apache-2.0" 
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: C++",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["rns_engine", "rns_engine.*"]
