[build-system]
requires = ["setuptools>=77", "wheel", "pybind11", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "rns_engine"
version = "0.4.0rc1"
description = "Exact RNS engine with session/cache API."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Evan Wesley" }
]
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
dependencies = ["numpy"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU Affero General Public License v3",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["rns_engine", "rns_engine.*"]
