[build-system]
requires = ["setuptools>=61", "wheel", "pybind11", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "rns_engine"
version = "0.4.0"
description = "Exact RNS engine with session/cache API."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Evan Wesley" }
]
license = {text = "AGPL-3.0-only"}
dependencies = ["numpy"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["rns_engine", "rns_engine.*"]

[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*"]
skip = ["pp*", "*-musllinux*"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
environment = {MACOSX_DEPLOYMENT_TARGET = "11.0"}
before-all = "brew install libomp || true"

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
